force-app/main/default/objects/Actual_Revenue__c/Actual_Revenue__c.object-meta.xml
<CustomObject>
    <label>Actual Revenue</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Actual Revenue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>